workflow(remove preview): add manual trigger

--- a/.github/workflows/remove-preview.yml
+++ b/.github/workflows/remove-preview.yml
@@ -4,6 +4,13 @@ on:
   pull_request:
     branches: [ "main" ]
     types: [closed]
+  workflow_dispatch:
+    inputs:
+      branch_name:
+        description: 'Branch name'
+        required: true
+        type: string
+
 
 permissions:
   contents: read
@@ -15,9 +22,9 @@ jobs:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       AWS_ENDPOINT_URL_S3: ${{ secrets.AWS_ENDPOINT_URL_S3 }}
-      TF_VAR_BRANCH_NAME: ${{ github.head_ref }}
-      TF_VAR_API_URL: ${{ github.head_ref}}-${{ vars.API_URL }}
-      TF_VAR_WEBSITE_URL: ${{ github.head_ref}}-${{ vars.WEBSITE_URL }}
+      TF_VAR_BRANCH_NAME: ${{ inputs.branch_name || github.head_ref }}
+      TF_VAR_API_URL: ${{ inputs.branch_name || github.head_ref}}-${{ vars.API_URL }}
+      TF_VAR_WEBSITE_URL: ${{ inputs.branch_name ||github.head_ref}}-${{ vars.WEBSITE_URL }}
       TF_VAR_ENVIRONMENT: ${{ vars.ENVIRONMENT }}
       TF_VAR_CLOUDFLARE_ZONE_ID: ${{ secrets.CLOUDFLARE_ZONE_ID }}
       TF_VAR_CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
