--- a/.github/workflows/create-preview.yml
+++ b/.github/workflows/create-preview.yml
@@ -2,6 +2,7 @@ name: 'Deploy preview environment'
 
 on:
   pull_request_target:
+    types: [opened, synchronize, reopened]
     branches: [ "main" ]
 
 permissions:
