--- a/.github/workflows/create-preview.yml
+++ b/.github/workflows/create-preview.yml
@@ -1,9 +1,10 @@
 name: 'Deploy preview environment'
 
 on:
-  pull_request_target:
-    types: [opened, synchronize, reopened]
-    branches: [ "main" ]
+  workflow_run:
+    workflows: ["Lint"]
+    types:
+      - completed
 
 permissions:
   contents: read
