--- a/.github/workflows/remove-preview.yml
+++ b/.github/workflows/remove-preview.yml
@@ -1,7 +1,7 @@
 name: 'Remove preview environment'
 
 on:
-  pull_request_target:
+  pull_request:
     types: [closed]
     branches: [ "main" ]
   workflow_dispatch:
