--- a/.github/workflows/create-preview.yml
+++ b/.github/workflows/create-preview.yml
@@ -1,7 +1,12 @@
 name: 'Deploy preview environment'
 
 on:
-  workflow_dispatch:
+  pull_request:
+    branches: [ "main" ]
+
+
+env:
+  IS_DEPENDABOT: ${{ github.actor == 'dependabot[bot]' }}
 
 permissions:
   contents: read
@@ -9,6 +14,7 @@ permissions:
 
 jobs:
   deploy-infra:
+    if: ${{ !env.IS_DEPENDABOT }}
     environment: preview
     env:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -31,16 +37,14 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Deploy
-        uses: ./.github/actions/infra
+        uses: ./.github/actions/update-infra
         with:
-          INFRA_DIR: './packages/infra'
           BRANCH_NAME: ${{ env.TF_VAR_BRANCH_NAME }}
 
   deploy-apps:
+    if: ${{ !env.IS_DEPENDABOT }}
     needs: deploy-infra
     environment: preview
-    env:
-      BRANCH_NAME: ${{ github.head_ref }}
     name: Deploy apps
     runs-on: ubuntu-latest
     steps:
@@ -53,43 +57,5 @@ jobs:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
           ENVIRONMENT: ${{ vars.ENVIRONMENT }}
-          BRANCH_NAME: ${{ env.BRANCH_NAME }}
-
-      - name: Add link to PR comment
-        uses: actions/github-script@v7
-        if: github.event_name == 'pull_request'
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          script: |
-            // 1. Retrieve existing bot comments for the PR
-            const { data: comments } = await github.rest.issues.listComments({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              issue_number: context.issue.number,
-            })
-            const botComment = comments.find(comment => {
-              return comment.user.type === 'Bot' && comment.body.includes('Preview URL')
-            })
-            
-            // 2. Prepare format of the comment
-            const output = `#### Preview URL 👉
-            
-            Marketing: [https://${{ github.head_ref}}-${{ vars.WEBSITE_URL }}/](https://${{ github.head_ref}}-${{ vars.WEBSITE_URL }}/)
-            API: [https://${{ github.head_ref}}-${{ vars.API_URL }}/api](https://${{ github.head_ref}}-${{ vars.API_URL }}/api)`
-          
-            // 3. If we have a comment, update it, otherwise create a new one
-            if (botComment) {
-              github.rest.issues.updateComment({
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                comment_id: botComment.id,
-                body: output
-              })
-            } else {
-              github.rest.issues.createComment({
-                issue_number: context.issue.number,
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                body: output
-              })
-            }
+          BRANCH_NAME: ${{ steps.normalize-branch-name.outputs.NORMALIZED_BRANCH_NAME }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
