--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,9 +31,8 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Deploy
-        uses: ./.github/actions/infra
+        uses: ./.github/actions/update-infra
         with:
-          INFRA_DIR: './packages/infra'
           BRANCH_NAME: ${{ env.TF_VAR_BRANCH_NAME }}
 
   deploy-apps:
