--- a/.github/workflows/remove-preview.yml
+++ b/.github/workflows/remove-preview.yml
@@ -39,7 +39,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Remove
-        uses: ./.github/actions/remove-infra
+        uses: ./.github/actions/update-infra
         with:
-          INFRA_DIR: './packages/infra'
           BRANCH_NAME: ${{ env.TF_VAR_BRANCH_NAME }}
+          DESTROY: true
