--- a/.github/actions/update-infra/action.yml
+++ b/.github/actions/update-infra/action.yml
@@ -37,7 +37,7 @@ runs:
       id: terraform-workspace-select
       shell: bash
       working-directory: ${{ inputs.INFRA_DIR }}
-      run: terraform workspace select ${{ inputs.DESTROY == false && '-or-create' }} ${{ steps.normalize-branch-name.outputs.NORMALIZED_BRANCH_NAME }}
+      run: terraform workspace select ${{ inputs.DESTROY == true && '' || '-or-create' }} ${{ steps.normalize-branch-name.outputs.NORMALIZED_BRANCH_NAME }}
 
     - name: Terraform Format
       if: inputs.DESTROY == false
