--- a/.github/workflows/remove-preview.yml
+++ b/.github/workflows/remove-preview.yml
@@ -4,6 +4,8 @@ on:
   pull_request:
     types: [closed]
     branches: [ "main" ]
+    tags:
+      - preview
   workflow_dispatch:
     inputs:
       branch_name:
