--- a/.github/workflows/create-preview.yml
+++ b/.github/workflows/create-preview.yml
@@ -4,12 +4,16 @@ on:
   pull_request:
     branches: [ "main" ]
 
+env:
+  IS_DEPENDABOT: ${{ github.actor == 'dependabot[bot]' }}
+
 permissions:
   contents: read
   pull-requests: write
 
 jobs:
   deploy-infra:
+    if: ${{ !env.IS_DEPENDABOT }}
     environment: preview
     env:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -37,6 +41,7 @@ jobs:
           BRANCH_NAME: ${{ env.TF_VAR_BRANCH_NAME }}
 
   deploy-apps:
+    if: ${{ !env.IS_DEPENDABOT }}
     needs: deploy-infra
     environment: preview
     name: Deploy apps
