--- a/.github/workflows/variables.yml
+++ b/.github/workflows/variables.yml
@@ -15,5 +15,6 @@ jobs:
         uses: actions/github-script@v7
         with:
           script: |
-            const github = ${{ github.event }}
-            console.log(github)
+            console.log('github', github)
+            console.log('event', github.event)
+            
