--- a/.github/workflows/variables.yml
+++ b/.github/workflows/variables.yml
@@ -15,6 +15,5 @@ jobs:
         uses: actions/github-script@v7
         with:
           script: |
-            console.log('github', github)
-            console.log('event', github.event)
-            
+            const githubEvent = ${{ github.event }}
+            console.log('event', githubEvent)
