--- a/.github/workflows/variables.yml
+++ b/.github/workflows/variables.yml
@@ -11,9 +11,8 @@ jobs:
   variables:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/github-script@v7
-        with:
-          script: |
-            const githubEvent = ${{ github.event }}
-            console.log('event', githubEvent)
+      - name: Dump GitHub context
+        env:
+          GITHUB_CONTEXT: ${{ toJson(github) }}
+        run: |
+          echo "$GITHUB_CONTEXT"
