--- a/.github/workflows/variables.yml
+++ b/.github/workflows/variables.yml
@@ -13,6 +13,6 @@ jobs:
     steps:
       - name: Dump GitHub context
         env:
-          GITHUB_CONTEXT: ${{ toJson(github) }}
+          GITHUB_CONTEXT: ${{ toJson(github.event.workflow_run) }}
         run: |
           echo "$GITHUB_CONTEXT"
