--- a/.github/workflows/create-preview.yml
+++ b/.github/workflows/create-preview.yml
@@ -1,11 +1,11 @@
 name: 'Deploy preview environment'
 
 on:
-  pull_request:
-    branches: [ "main" ]
-
-env:
-  IS_DEPENDABOT: ${{ github.actor == 'dependabot[bot]' }}
+  workflow_run:
+    workflows:
+      - Lint
+    types:
+      - in_progress
 
 permissions:
   contents: read
@@ -13,15 +13,14 @@ permissions:
 
 jobs:
   deploy-infra:
-    if: ${{ !env.IS_DEPENDABOT }}
     environment: preview
     env:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       AWS_ENDPOINT_URL_S3: ${{ secrets.AWS_ENDPOINT_URL_S3 }}
-      TF_VAR_BRANCH_NAME: ${{ github.head_ref }}
-      TF_VAR_API_URL: ${{ github.head_ref}}-${{ vars.API_URL }}
-      TF_VAR_WEBSITE_URL: ${{ github.head_ref}}-${{ vars.WEBSITE_URL }}
+      TF_VAR_BRANCH_NAME: ${{ github.event.workflow_run.head_branch }}
+      TF_VAR_API_URL: ${{ github.event.workflow_run.head_branch }}-${{ vars.API_URL }}
+      TF_VAR_WEBSITE_URL: ${{ github.event.workflow_run.head_branch }}-${{ vars.WEBSITE_URL }}
       TF_VAR_ENVIRONMENT: ${{ vars.ENVIRONMENT }}
       TF_VAR_CLOUDFLARE_ZONE_ID: ${{ secrets.CLOUDFLARE_ZONE_ID }}
       TF_VAR_CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
@@ -41,7 +40,6 @@ jobs:
           BRANCH_NAME: ${{ env.TF_VAR_BRANCH_NAME }}
 
   deploy-apps:
-    if: ${{ !env.IS_DEPENDABOT }}
     needs: deploy-infra
     environment: preview
     name: Deploy apps
@@ -56,7 +54,7 @@ jobs:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
           ENVIRONMENT: ${{ vars.ENVIRONMENT }}
-          BRANCH_NAME: ${{ steps.normalize-branch-name.outputs.NORMALIZED_BRANCH_NAME }}
+          BRANCH_NAME: ${{ github.event.workflow_run.head_branch }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           WEBSITE_URL: ${{ vars.WEBSITE_URL }}
           API_URL: ${{ vars.API_URL }}
