--- a/.github/actions/update-infra/action.yml
+++ b/.github/actions/update-infra/action.yml
@@ -9,10 +9,9 @@ inputs:
     required: false
     default: './packages/infra'
   DESTROY:
-    type: boolean
     description: 'Destroy infra'
     required: false
-    default: false
+    default: 'false'
 
 runs:
   using: "composite"
@@ -40,42 +39,42 @@ runs:
       run: terraform workspace select ${{ inputs.DESTROY == true && '' || '-or-create' }} ${{ steps.normalize-branch-name.outputs.NORMALIZED_BRANCH_NAME }}
 
     - name: Terraform Format
-      if: ${{ !inputs.DESTROY }}
+      if: ${{ inputs.DESTROY == 'false' }}
       id: terraform-format
       run: terraform fmt -check
       shell: bash
       working-directory: ${{ inputs.INFRA_DIR }}
 
     - name: Terraform Plan
-      if: ${{ !inputs.DESTROY }}
+      if: ${{ inputs.DESTROY == 'false' }}
       id: terraform-plan
       run: terraform plan -input=false
       shell: bash
       working-directory: ${{ inputs.INFRA_DIR }}
 
     - name: Terraform Apply
-      if: ${{ !inputs.DESTROY }}
+      if: ${{ inputs.DESTROY == 'false' }}
       id: terraform-apply
       shell: bash
       working-directory: ${{ inputs.INFRA_DIR }}
       run: terraform apply -auto-approve -input=false
 
     - name: Terraform Destroy
-      if: ${{ inputs.DESTROY }}
+      if: ${{ inputs.DESTROY == 'true' }}
       id: terraform-destroy
       run: terraform destroy -auto-approve -input=false
       shell: bash
       working-directory: ${{ inputs.INFRA_DIR }}
 
     - name: Terraform Workspace back to default
-      if: ${{ inputs.DESTROY }}
+      if: ${{ inputs.DESTROY == 'true' }}
       id: terraform-workspace-select-default
       run: terraform workspace select default
       shell: bash
       working-directory: ${{ inputs.INFRA_DIR }}
 
     - name: Terraform Workspace Delete
-      if: ${{ inputs.DESTROY }}
+      if: ${{ inputs.DESTROY == 'true' }}
       id: terraform-workspace-delete
       run: terraform workspace delete ${{ steps.normalize-branch-name.outputs.NORMALIZED_BRANCH_NAME }}
       shell: bash
