chore(create-preview): update conditions

--- a/.github/actions/update-infra/action.yml
+++ b/.github/actions/update-infra/action.yml
@@ -60,21 +60,21 @@ runs:
       run: terraform apply -auto-approve -input=false
 
     - name: Terraform Destroy
-      if: ${{ inputs.DESTROY == 'true' }}
+      if: ${{ inputs.DESTROY == 'true' && inputs.BRANCH_NAME != 'main' }}
       id: terraform-destroy
       run: terraform destroy -auto-approve -input=false
       shell: bash
       working-directory: ${{ inputs.INFRA_DIR }}
 
     - name: Terraform Workspace back to default
-      if: ${{ inputs.DESTROY == 'true' }}
+      if: ${{ inputs.DESTROY == 'true' && inputs.BRANCH_NAME != 'main' }}
       id: terraform-workspace-select-default
       run: terraform workspace select default
       shell: bash
       working-directory: ${{ inputs.INFRA_DIR }}
 
     - name: Terraform Workspace Delete
-      if: ${{ inputs.DESTROY == 'true' }}
+      if: ${{ inputs.DESTROY == 'true' && inputs.BRANCH_NAME != 'main' }}
       id: terraform-workspace-delete
       run: terraform workspace delete ${{ steps.normalize-branch-name.outputs.NORMALIZED_BRANCH_NAME }}
       shell: bash
