--- a/.github/actions/deploy-app/action.yml
+++ b/.github/actions/deploy-app/action.yml
@@ -64,6 +64,8 @@ runs:
       with:
         github-token: ${{ inputs.GITHUB_TOKEN }}
         script: |
+          console.log(context)
+          return
           // 1. Retrieve existing bot comments for the PR
           const { data: comments } = await github.rest.issues.listComments({
             owner: context.repo.owner,
