--- a/.github/actions/deploy-app/action.yml
+++ b/.github/actions/deploy-app/action.yml
@@ -60,7 +60,7 @@ runs:
 
     - name: Add links to PR comment
       uses: actions/github-script@v7
-      if: github.event_name == 'pull_request' && inputs.GITHUB_TOKEN
+      if: ${{ github.event.workflow_run.event == 'pull_request' && inputs.GITHUB_TOKEN != '' }}
       with:
         github-token: ${{ inputs.GITHUB_TOKEN }}
         script: |
