--- a/.github/workflows/create-preview.yml
+++ b/.github/workflows/create-preview.yml
@@ -14,19 +14,6 @@ permissions:
 jobs:
   deploy-infra:
     environment: preview
-    env:
-      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      AWS_ENDPOINT_URL_S3: ${{ secrets.AWS_ENDPOINT_URL_S3 }}
-      TF_VAR_BRANCH_NAME: ${{ github.event.workflow_run.head_branch }}
-      TF_VAR_API_URL: ${{ github.event.workflow_run.head_branch }}-${{ vars.API_URL }}
-      TF_VAR_WEBSITE_URL: ${{ github.event.workflow_run.head_branch }}-${{ vars.WEBSITE_URL }}
-      TF_VAR_ENVIRONMENT: ${{ vars.ENVIRONMENT }}
-      TF_VAR_CLOUDFLARE_ZONE_ID: ${{ secrets.CLOUDFLARE_ZONE_ID }}
-      TF_VAR_CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-      TF_VAR_CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-      TF_VAR_SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
-      TF_VAR_SUPABASE_ANON_KEY: ${{ secrets.SUPABASE_ANON_KEY }}
 
     name: Deploy preview infra
     runs-on: ubuntu-latest
@@ -37,7 +24,18 @@ jobs:
       - name: Deploy
         uses: ./.github/actions/update-infra
         with:
-          BRANCH_NAME: ${{ env.TF_VAR_BRANCH_NAME }}
+          BRANCH_NAME: ${{ github.event.workflow_run.head_branch }}
+          API_URL: ${{ vars.API_URL }}
+          WEBSITE_URL: ${{ vars.WEBSITE_URL }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_ENDPOINT_URL_S3: ${{ secrets.AWS_ENDPOINT_URL_S3 }}
+          ENVIRONMENT: ${{ vars.ENVIRONMENT }}
+          CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+          CLOUDFLARE_ZONE_ID: ${{ secrets.CLOUDFLARE_ZONE_ID }}
+          SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
+          SUPABASE_ANON_KEY: ${{ secrets.SUPABASE_ANON_KEY }}
 
   deploy-apps:
     needs: deploy-infra
