chore(staging workflow): update inputs

--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -36,6 +36,17 @@ jobs:
         uses: ./.github/actions/update-infra
         with:
           BRANCH_NAME: ${{ env.TF_VAR_BRANCH_NAME }}
+          API_URL: ${{ vars.API_URL }}
+          WEBSITE_URL: ${{ vars.WEBSITE_URL }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_ENDPOINT_URL_S3: ${{ secrets.AWS_ENDPOINT_URL_S3 }}
+          ENVIRONMENT: ${{ vars.ENVIRONMENT }}
+          CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+          CLOUDFLARE_ZONE_ID: ${{ secrets.CLOUDFLARE_ZONE_ID }}
+          SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
+          SUPABASE_ANON_KEY: ${{ secrets.SUPABASE_ANON_KEY }}
 
   deploy-apps:
     needs: deploy-infra
