--- a/.github/workflows/remove-preview.yml
+++ b/.github/workflows/remove-preview.yml
@@ -20,19 +20,6 @@ permissions:
 jobs:
   remove-infra:
     environment: preview
-    env:
-      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      AWS_ENDPOINT_URL_S3: ${{ secrets.AWS_ENDPOINT_URL_S3 }}
-      TF_VAR_BRANCH_NAME: ${{ inputs.branch_name || github.head_ref }}
-      TF_VAR_API_URL: ${{ inputs.branch_name || github.head_ref}}-${{ vars.API_URL }}
-      TF_VAR_WEBSITE_URL: ${{ inputs.branch_name ||github.head_ref}}-${{ vars.WEBSITE_URL }}
-      TF_VAR_ENVIRONMENT: ${{ vars.ENVIRONMENT }}
-      TF_VAR_CLOUDFLARE_ZONE_ID: ${{ secrets.CLOUDFLARE_ZONE_ID }}
-      TF_VAR_CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-      TF_VAR_CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-      TF_VAR_SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
-      TF_VAR_SUPABASE_ANON_KEY: ${{ secrets.SUPABASE_ANON_KEY }}
 
     name: Remove preview infra
     runs-on: ubuntu-latest
@@ -43,5 +30,16 @@ jobs:
       - name: Remove
         uses: ./.github/actions/update-infra
         with:
-          BRANCH_NAME: ${{ env.TF_VAR_BRANCH_NAME }}
           DESTROY: 'true'
+          BRANCH_NAME: ${{ github.ref_name }}
+          API_URL: ${{ vars.API_URL }}
+          WEBSITE_URL: ${{ vars.WEBSITE_URL }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_ENDPOINT_URL_S3: ${{ secrets.AWS_ENDPOINT_URL_S3 }}
+          ENVIRONMENT: ${{ vars.ENVIRONMENT }}
+          CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+          CLOUDFLARE_ZONE_ID: ${{ secrets.CLOUDFLARE_ZONE_ID }}
+          SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
+          SUPABASE_ANON_KEY: ${{ secrets.SUPABASE_ANON_KEY }}
