--- a/.github/actions/normalize-branch-name/action.yml
+++ b/.github/actions/normalize-branch-name/action.yml
@@ -22,6 +22,7 @@ runs:
           // Replace '/' with '-'
           // Replace '_' with '-'
           // Replace '.' with '-'
-          const normalizedBranchName = branchName.replace(/\//g, '-').replace(/_/g, '-').replace(/\./g, '-')
+          // Remove '/npm_and_yarn/'
+          const normalizedBranchName = branchName.replace(/\//g, '-').replace(/_/g, '-').replace(/\./g, '-').replace('/npm_and_yarn/', '')
           return normalizedBranchName
         result-encoding: string
