--- a/.github/actions/normalize-branch-name/action.yml
+++ b/.github/actions/normalize-branch-name/action.yml
@@ -22,7 +22,7 @@ runs:
           // Replace '/' with '-'
           // Replace '_' with '-'
           // Replace '.' with '-'
-          // Remove '/npm_and_yarn/'
+          // Remove 'dependabot/npm_and_yarn/'
           const normalizedBranchName = branchName.replace(/\//g, '-').replace(/_/g, '-').replace(/\./g, '-').replace('/npm_and_yarn/', '')
           return normalizedBranchName
         result-encoding: string
