--- a/.github/actions/update-infra/action.yml
+++ b/.github/actions/update-infra/action.yml
@@ -45,6 +45,9 @@ inputs:
   SUPABASE_ANON_KEY:
     description: 'Supabase anon key'
     required: true
+  GITHUB_TOKEN:
+    description: 'The GitHub token'
+    required: false
 
 runs:
   using: "composite"
@@ -103,6 +106,25 @@ runs:
       shell: bash
       working-directory: ${{ inputs.INFRA_DIR }}
 
+    - name: Install dependencies
+      if: ${{ inputs.DESTROY == 'false' }}
+      run: npm install
+      shell: bash
+
+    - name: Build api
+      if: ${{ inputs.DESTROY == 'false' }}
+      uses: cloudflare/wrangler-action@v3
+      with:
+        apiToken: ${{ inputs.CLOUDFLARE_API_TOKEN }}
+        accountId: ${{ inputs.CLOUDFLARE_ACCOUNT_ID }}
+        command: deploy --name api-${{ steps.normalize-branch-name.outputs.NORMALIZED_BRANCH_NAME }} --dry-run --minify --outdir dist
+        workingDirectory: "./apps/api"
+
+    - name: Build frontend
+      if: ${{ inputs.DESTROY == 'false' }}
+      run: npm run build-ci
+      shell: bash
+
     - name: Terraform Plan
       if: ${{ inputs.DESTROY == 'false' }}
       id: terraform-plan
@@ -116,6 +138,15 @@ runs:
       shell: bash
       working-directory: ${{ inputs.INFRA_DIR }}
       run: terraform apply -auto-approve -input=false
+
+    - name: Deploy marketing
+      if: ${{ inputs.DESTROY == 'false' }}
+      uses: cloudflare/wrangler-action@v3
+      with:
+        apiToken: ${{ inputs.CLOUDFLARE_API_TOKEN }}
+        accountId: ${{ inputs.CLOUDFLARE_ACCOUNT_ID }}
+        command: pages deploy ./.vercel/output/static --project-name marketing-${{ steps.normalize-branch-name.outputs.NORMALIZED_BRANCH_NAME }} --branch main
+        workingDirectory: "./apps/marketing"
 
     - name: Terraform Destroy
       if: ${{ inputs.DESTROY == 'true' && inputs.BRANCH_NAME != 'main' }}
@@ -137,3 +168,49 @@ runs:
       run: terraform workspace delete ${{ steps.normalize-branch-name.outputs.NORMALIZED_BRANCH_NAME }}
       shell: bash
       working-directory: ${{ inputs.INFRA_DIR }}
+
+    - name: Add links to PR comment
+      uses: actions/github-script@v7
+      if: ${{ inputs.DESTROY == 'false' && github.event.workflow_run.event == 'pull_request' && inputs.GITHUB_TOKEN != '' }}
+      with:
+        github-token: ${{ inputs.GITHUB_TOKEN }}
+        script: |
+          // 1. Retrieve existing bot comments for the PR
+          const { data: comments } = await github.rest.issues.listComments({
+            owner: context.repo.owner,
+            repo: context.repo.repo,
+            issue_number: context.payload.workflow_run.pull_requests[0].number
+          })
+          const botComment = comments.find(comment => {
+            return comment.user.type === 'Bot' && comment.body.includes('Preview URL')
+          })
+
+          // 2. Prepare format of the comment
+          const output = `#### Preview URL 👉
+
+          Marketing: [https://${{ steps.normalize-branch-name.outputs.NORMALIZED_BRANCH_NAME }}-${{ inputs.WEBSITE_URL }}/](https://${{ steps.normalize-branch-name.outputs.NORMALIZED_BRANCH_NAME }}-${{ inputs.WEBSITE_URL }}/)
+          API: [https://${{ steps.normalize-branch-name.outputs.NORMALIZED_BRANCH_NAME }}-${{ inputs.API_URL }}/api](https://${{ steps.normalize-branch-name.outputs.NORMALIZED_BRANCH_NAME }}-${{ inputs.API_URL }}/api)`
+
+          // 3. If we have a comment, update it, otherwise create a new one
+          if (botComment) {
+            github.rest.issues.updateComment({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              comment_id: botComment.id,
+              body: output
+            })
+          } else {
+            github.rest.issues.createComment({
+              issue_number: context.payload.workflow_run.pull_requests[0].number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: output
+            })
+          }
+
+          github.rest.issues.addLabels({
+              issue_number: context.payload.workflow_run.pull_requests[0].number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              labels: ['preview']
+            })
