--- a/.github/workflows/remove-preview.yml
+++ b/.github/workflows/remove-preview.yml
@@ -43,3 +43,4 @@ jobs:
           CLOUDFLARE_ZONE_ID: ${{ secrets.CLOUDFLARE_ZONE_ID }}
           SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
           SUPABASE_ANON_KEY: ${{ secrets.SUPABASE_ANON_KEY }}
+          WORKERS_SCRIPT_PATH: 'worker.js'
