chore(normalize branch name): add limit to branch name

--- a/.github/actions/normalize-branch-name/action.yml
+++ b/.github/actions/normalize-branch-name/action.yml
@@ -21,6 +21,8 @@ runs:
       id: normalize-branch-name
       with:
         script: |
+          
+          // Lenght limited by Cloudflare names
           const DEFAULT_LENGTH_LIMIT = 58
           const limit = parseInt('${{ inputs.LENGTH_LIMIT }}' || DEFAULT_LENGTH_LIMIT)
           const branchName = '${{ inputs.BRANCH_NAME }}'
@@ -28,6 +30,6 @@ runs:
           // Replace '_' with '-'
           // Replace '.' with '-'
           // Remove 'dependabot/npm_and_yarn/'
-          const normalizedBranchName = branchName.replace(/\//g, '-').replace(/_/g, '-').replace(/\./g, '-').slice(0, limit)
+          const normalizedBranchName = branchName.replace(/\//g, '-').replace(/_/g, '-').replace(/\./g, '-').replace('dependabot/npm_and_yarn/', '').slice(0, limit)
           return normalizedBranchName
         result-encoding: string
