--- a/.github/workflows/create-preview.yml
+++ b/.github/workflows/create-preview.yml
@@ -1,4 +1,4 @@
-name: 'Deploy preview environment'
+name: 'Deploy preview branch'
 
 on:
   workflow_run:
@@ -12,10 +12,10 @@ permissions:
   pull-requests: write
 
 jobs:
-  deploy-infra:
+  deploy-preview-branch:
     environment: preview
 
-    name: Deploy preview infra
+    name: Deploy preview branch
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -36,23 +36,4 @@ jobs:
           CLOUDFLARE_ZONE_ID: ${{ secrets.CLOUDFLARE_ZONE_ID }}
           SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
           SUPABASE_ANON_KEY: ${{ secrets.SUPABASE_ANON_KEY }}
-
-  deploy-apps:
-    needs: deploy-infra
-    environment: preview
-    name: Deploy apps
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Deploy
-        uses: ./.github/actions/deploy-app
-        with:
-          CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-          CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-          ENVIRONMENT: ${{ vars.ENVIRONMENT }}
-          BRANCH_NAME: ${{ github.event.workflow_run.head_branch }}
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          WEBSITE_URL: ${{ vars.WEBSITE_URL }}
-          API_URL: ${{ vars.API_URL }}
+          WORKERS_SCRIPT_PATH: '../../apps/api/dist/index.js'
