--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,21 +10,8 @@ permissions:
   contents: read
 
 jobs:
-  deploy-infra:
+  deploy-production-apps:
     environment: production
-    env:
-      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      AWS_ENDPOINT_URL_S3: ${{ secrets.AWS_ENDPOINT_URL_S3 }}
-      TF_VAR_BRANCH_NAME: production
-      TF_VAR_API_URL: ${{ vars.API_URL }}
-      TF_VAR_WEBSITE_URL: ${{ vars.WEBSITE_URL }}
-      TF_VAR_ENVIRONMENT: ${{ vars.ENVIRONMENT }}
-      TF_VAR_CLOUDFLARE_ZONE_ID: ${{ secrets.CLOUDFLARE_ZONE_ID }}
-      TF_VAR_CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-      TF_VAR_CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-      TF_VAR_SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
-      TF_VAR_SUPABASE_ANON_KEY: ${{ secrets.SUPABASE_ANON_KEY }}
 
     name: Deploy production infra
     runs-on: ubuntu-latest
@@ -35,7 +22,7 @@ jobs:
       - name: Deploy
         uses: ./.github/actions/update-infra
         with:
-          BRANCH_NAME: ${{ env.TF_VAR_BRANCH_NAME }}
+          BRANCH_NAME: 'production'
           API_URL: ${{ vars.API_URL }}
           WEBSITE_URL: ${{ vars.WEBSITE_URL }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -47,24 +34,4 @@ jobs:
           CLOUDFLARE_ZONE_ID: ${{ secrets.CLOUDFLARE_ZONE_ID }}
           SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
           SUPABASE_ANON_KEY: ${{ secrets.SUPABASE_ANON_KEY }}
-
-  deploy-apps:
-    needs: deploy-infra
-    environment: production
-    env:
-      BRANCH_NAME: production
-    name: Deploy apps
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Deploy
-        uses: ./.github/actions/deploy-app
-        with:
-          CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-          CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-          ENVIRONMENT: ${{ vars.ENVIRONMENT }}
-          BRANCH_NAME: ${{ env.BRANCH_NAME }}
-          WEBSITE_URL: ${{ vars.WEBSITE_URL }}
-          API_URL: ${{ vars.API_URL }}
+          WORKERS_SCRIPT_PATH: '../../apps/api/dist/index.js'
