--- a/.github/workflows/create-preview.yml
+++ b/.github/workflows/create-preview.yml
@@ -14,6 +14,8 @@ permissions:
 jobs:
   deploy-preview-branch:
     environment: preview
+    env:
+      BRANCH_NAME: ${{ github.event.workflow_run.head_branch }}
 
     name: Deploy preview branch
     runs-on: ubuntu-latest
@@ -21,10 +23,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Deploy
-        uses: ./.github/actions/update-infra
+      - name: Set env variables
+        uses: ./.github/actions/set-env-variables
         with:
-          BRANCH_NAME: ${{ github.event.workflow_run.head_branch }}
+          BRANCH_NAME: ${{ env.BRANCH_NAME }}
           API_URL: ${{ vars.API_URL }}
           WEBSITE_URL: ${{ vars.WEBSITE_URL }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -36,4 +38,56 @@ jobs:
           CLOUDFLARE_ZONE_ID: ${{ secrets.CLOUDFLARE_ZONE_ID }}
           SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
           SUPABASE_ANON_KEY: ${{ secrets.SUPABASE_ANON_KEY }}
-          WORKERS_SCRIPT_PATH: '../../apps/api/dist/index.js'
+
+      - name: Deploy terraform
+        uses: ./.github/actions/deploy-terraform
+        with:
+          BRANCH_NAME: ${{ env.BRANCH_NAME }}
+          CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          WEBSITE_URL: ${{ vars.WEBSITE_URL }}
+          CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+
+      - name: Add links to PR comment
+        uses: actions/github-script@v7
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            // 1. Retrieve existing bot comments for the PR
+            const { data: comments } = await github.rest.issues.listComments({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              issue_number: context.payload.workflow_run.pull_requests[0].number
+            })
+            const botComment = comments.find(comment => {
+              return comment.user.type === 'Bot' && comment.body.includes('Preview URL')
+            })
+
+            // 2. Prepare format of the comment
+            const output = `#### Preview URL 👉
+
+            Marketing: [https://${{ env.BRANCH_NAME }}-${{ vars.WEBSITE_URL }}/](https://${{ env.BRANCH_NAME }}-${{ vars.WEBSITE_URL }}/)
+            API: [https://${{ env.BRANCH_NAME }}-${{ vars.API_URL }}/api](https://${{ env.BRANCH_NAME }}-${{ vars.API_URL }}/api)`
+
+            // 3. If we have a comment, update it, otherwise create a new one
+            if (botComment) {
+              github.rest.issues.updateComment({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                comment_id: botComment.id,
+                body: output
+              })
+            } else {
+              github.rest.issues.createComment({
+                issue_number: context.payload.workflow_run.pull_requests[0].number,
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                body: output
+              })
+            }
+
+            github.rest.issues.addLabels({
+                issue_number: context.payload.workflow_run.pull_requests[0].number,
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                labels: ['preview']
+              })
