--- a/.github/workflows/create-preview.yml
+++ b/.github/workflows/create-preview.yml
@@ -46,6 +46,7 @@ jobs:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           WEBSITE_URL: ${{ vars.WEBSITE_URL }}
           CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+          ENVIRONMENT: ${{ vars.ENVIRONMENT }}
 
       - name: Add links to PR comment
         uses: actions/github-script@v7
