--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -44,4 +44,5 @@ jobs:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           WEBSITE_URL: ${{ vars.WEBSITE_URL }}
           CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+          ENVIRONMENT: ${{ vars.ENVIRONMENT }}
 
