chore(build api action): update build directory

--- a/.github/actions/build-api/action.yml
+++ b/.github/actions/build-api/action.yml
@@ -12,11 +12,11 @@ inputs:
     required: true
   API_BUILD_PATH:
     description: 'Path to api build'
-    default: './apps/api/dist'
+    default: 'apps/api/dist'
     required: false
   PROJECT_PATH:
     description: 'Path to script'
-    default: './apps/api'
+    default: 'apps/api'
     required: false
 
 outputs:
